# traj-dist-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  context7.json  pyproject.toml  versions.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-wheels-reusable.yml  build-wheels.yml  check-crates.yml  ci.yml  create-prerelease.yml  deploy-docs.yml  publish-testpypi.yml  release.yml  test-release.yml
1.0.0-beta.1/: 404.html  index.html  sitemap.xml
1.0.0-beta.1/api_reference/: index.html
1.0.0-beta.1/benchmark_guide/: index.html
1.0.0-beta.1/installation/: index.html
1.0.0-beta.1/performance/: index.html
1.0.0-beta.1/search/: search_index.json
1.0.0-beta.1/usage_for_python/: index.html
1.0.0-beta.1/usage_for_rust/: index.html
1.0.0-beta.2/: 404.html  index.html  objects.inv  sitemap.xml
1.0.0-beta.2/api_reference/: index.html
1.0.0-beta.2/benchmark_guide/: index.html
1.0.0-beta.2/installation/: index.html
1.0.0-beta.2/performance/: index.html
1.0.0-beta.2/search/: search_index.json
1.0.0-beta.2/usage_for_python/: index.html
1.0.0-beta.2/usage_for_rust/: index.html
1.0.0-beta.3/: 404.html  index.html  sitemap.xml
1.0.0-beta.3/api_reference/: index.html
1.0.0-beta.3/benchmark_guide/: index.html
1.0.0-beta.3/installation/: index.html
1.0.0-beta.3/performance/: index.html
1.0.0-beta.3/search/: search_index.json
1.0.0-beta.3/usage_for_python/: index.html
1.0.0-beta.3/usage_for_rust/: index.html
1.0.0-beta.4/: 404.html  index.html  sitemap.xml
1.0.0-beta.4/api_reference/: index.html
1.0.0-beta.4/benchmark_guide/: index.html
1.0.0-beta.4/installation/: index.html
1.0.0-beta.4/performance/: index.html
1.0.0-beta.4/search/: search_index.json
1.0.0-beta.4/usage_for_python/: index.html
1.0.0-beta.4/usage_for_rust/: index.html
1.0.0-beta.5/: 404.html  index.html  sitemap.xml
1.0.0-beta.5/api_reference/: index.html
1.0.0-beta.5/benchmark_guide/: index.html
1.0.0-beta.5/installation/: index.html
1.0.0-beta.5/performance/: index.html
1.0.0-beta.5/search/: search_index.json
1.0.0-beta.5/usage_for_python/: index.html
1.0.0-beta.5/usage_for_rust/: index.html
1.0.0-rc.1/: 404.html  index.html  sitemap.xml
1.0.0-rc.1/api_reference/: index.html
1.0.0-rc.1/benchmark_guide/: index.html
1.0.0-rc.1/installation/: index.html
1.0.0-rc.1/performance/: index.html
1.0.0-rc.1/search/: search_index.json
1.0.0-rc.1/usage_for_python/: index.html
1.0.0-rc.1/usage_for_rust/: index.html
1.0.0-rc.2/: 404.html  index.html  sitemap.xml
1.0.0-rc.2/api_reference/: index.html
1.0.0-rc.2/benchmark_guide/: index.html
1.0.0-rc.2/installation/: index.html
1.0.0-rc.2/performance/: index.html
1.0.0-rc.2/search/: search_index.json
1.0.0-rc.2/usage_for_python/: index.html
1.0.0-rc.2/usage_for_rust/: index.html
1.0.0-rc.3/: 404.html  index.html  sitemap.xml
1.0.0-rc.3/api_reference/: index.html
1.0.0-rc.3/benchmark_guide/: index.html
1.0.0-rc.3/installation/: index.html
1.0.0-rc.3/performance/: index.html
1.0.0-rc.3/search/: search_index.json
1.0.0-rc.3/usage_for_python/: index.html
1.0.0-rc.3/usage_for_rust/: index.html
1.0.0-rc.4/: 404.html  index.html  sitemap.xml
1.0.0-rc.4/api_reference/: index.html
1.0.0-rc.4/benchmark_guide/: index.html
1.0.0-rc.4/installation/: index.html
1.0.0-rc.4/performance/: index.html
1.0.0-rc.4/search/: search_index.json
1.0.0-rc.4/usage_for_python/: index.html
1.0.0-rc.4/usage_for_rust/: index.html
1.0.0-rc.5/: 404.html  index.html  objects.inv  sitemap.xml
1.0.0-rc.5/api_reference/: index.html
1.0.0-rc.5/benchmark_guide/: index.html
1.0.0-rc.5/installation/: index.html
1.0.0-rc.5/performance/: index.html
1.0.0-rc.5/search/: search_index.json
1.0.0-rc.5/usage_for_python/: index.html
1.0.0-rc.5/usage_for_rust/: index.html
dev/: 404.html  index.html  sitemap.xml
dev/api_reference/: index.html
dev/benchmark_guide/: index.html
dev/executed/: index.html
dev/installation/: index.html
dev/performance/: index.html
dev/search/: search_index.json
dev/usage_for_python/: index.html
dev/usage_for_rust/: index.html
docs/: algorithms.md  api.md  api_distance.md  api_trajectory.md  conf.py  index.md  installation.md  performance.md  usage.md  user_guide_python.md  user_guide_rust.md
examples/: basic_distance.rs  batch_computation.rs  precomputed_matrix.rs
examples/python/: basic_distance.py  batch_computation.py  metric_api.py  parallel_processing.py  test_non_tty_progress.py
mk_docs/: gen_ref_pages.py  mkdocs.yml
mk_docs/docs/: benchmark_guide.md  index.md  installation.md  performance.md  usage_for_python.ipynb  usage_for_rust.ipynb
mk_docs/docs/overrides/: main.html
py_tests/: conftest.py  schemas.py  test_batch.py  test_batch_performance.py  test_ci.py  test_debug_metainfo.py  test_discret_frechet.py  test_dtw.py  test_edr.py  test_edwp.py  test_erp.py  test_framework.py  test_frechet.py  test_hausdorff.py  test_lcss.py  test_pickle.py  test_precomputed_matrix.py  test_readme_examples.py  test_sspd.py
python/traj_dist_rs/: __init__.py  _lib.pyi
scripts/: benchmark.py  build_docs.sh  build_wheels.sh  generate_all_test_cases.sh  generate_edwp_test_cases.py  generate_performance_report.py  generate_test_case.py  generate_test_case_cython.py  performance_comparison.py  pre_build.sh  setup_traj_dist_env.sh  test_wheel.sh
scripts/benchmark/: algorithms_config.json  analyze_batch_results.py  analyze_benchmark_results.py  benchmark_batch_traj_dist.py  benchmark_batch_traj_dist_rs.py  benchmark_traj_dist.py  benchmark_traj_dist_rs.py  generate_baseline_trajectories.py  run_benchmark.sh
src/: err.rs  lib.rs  traits.rs
src/binding/: batch.rs  err.rs  mod.rs  trajectory.rs
src/distance/: base.rs  batch.rs  discret_frechet.rs  distance_type.rs  dtw.rs  edr.rs  edwp.rs  erp.rs  euclidean.rs  frechet.rs  hausdorff.rs  lcss.rs  mod.rs  spherical.rs  sspd.rs  utils.rs
tests/: algorithms.rs  boundary_cases.rs  error_handling.rs  matrix_return.rs  readme_examples.rs
tests/common/: mod.rs
(+50 files in other folders)
