[package]
name = "traj-dist-rs"
version = "1.0.0-beta.1"
edition = "2024"
authors = ["TrajDist-rs Contributors"]
license = "MIT"
description = "High-performance trajectory distance calculations in Rust with Python bindings"
documentation = "https://github.com/Davidham3/traj-dist-rs/blob/main/README.md"
homepage = "https://github.com/Davidham3/traj-dist-rs"
repository = "https://github.com/Davidham3/traj-dist-rs"
readme = "README.md"
keywords = ["trajectory", "distance", "algorithm", "python", "bindings"]
categories = ["algorithms", "science", "api-bindings"]

[lib]
name = "traj_dist_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python-binding = ["pyo3", "pyo3-stub-gen", "pyo3-stub-gen-derive", "numpy"]
parallel = ["rayon", "num_cpus"]

[dependencies]
thiserror = "2"
strum = "0.26"
strum_macros = "0.26"
bincode = "2"
pyo3 = { version = "0.26", optional = true }
pyo3-stub-gen = { version = "0.17", optional = true }
pyo3-stub-gen-derive = { version = "0.17", optional = true }
numpy = { version = "0.26", optional = true }
rayon = { version = "1.8", optional = true }
num_cpus = { version = "1.16", optional = true }

[dev-dependencies]
tempfile = "3"
rand = "0.8"
