[project]
name = "traj-dist-rs"
version = "0.1.0a2"
description = "High-performance trajectory distance calculations in Rust with Python bindings"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Chao Song"},
]
keywords = ["trajectory", "distance", "algorithm", "performance", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "numpy>=1.21.6",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=24.8.0",
    "ipython>=8.38.0",
    "isort>=5.13.2",
    "jupyter>=1.1.1",
    "linkify-it-py>=2.0.3",
    "maturin>=1.11.5",
    "myst-nb>=1.3.0",
    "pandas>=1.5.1",
    "pip>=25.3",
    "polars>=1.8.2",
    "pyarrow>=17.0.0",
    "pydantic>=2.12.5",
    "pytest>=8.3.5",
    "ruff>=0.14.14",
    "setuptools>=75.3.3",
    "sphinx>=8.1.3",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["maturin>=1.11.5"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "traj_dist_rs._lib"
features = ["python-binding", "pyo3/extension-module"]

[tool.cibuildwheel]
build-frontend = "build[uv]"
build = "cp310-manylinux_x86_64 cp311-manylinux_x86_64 cp312-manylinux_x86_64 cp313-manylinux_x86_64"
manylinux-x86_64-image = "manylinux2014"

[tool.cibuildwheel.linux]
# Build for x86_64 only (can add aarch64 if needed)
archs = ["x86_64"]
# Environment variables
environment = { CARGO_TERM_COLOR = "always" }
# Before build: install build dependencies
before-build = "pip install --upgrade pip && pip install 'maturin>=1.11.5'"
# Test command - simple import test to avoid test data dependency
test-requires = "pytest numpy"
test-command = "python -c 'import traj_dist_rs; print(\"Import successful\")'"

[tool.cibuildwheel.macos]
# Build for both Intel and Apple Silicon
archs = ["x86_64", "arm64"]
environment = { CARGO_TERM_COLOR = "always" }
before-build = "pip install --upgrade pip && pip install 'maturin>=1.11.5'"
test-requires = "pytest numpy"
test-command = "python -c 'import traj_dist_rs; print(\"Import successful\")'"

[tool.cibuildwheel.windows]
# Build for AMD64
archs = ["AMD64"]
environment = { CARGO_TERM_COLOR = "always" }
before-build = "pip install --upgrade pip && pip install 'maturin>=1.11.5'"
test-requires = "pytest numpy"
test-command = "python -c 'import traj_dist_rs; print(\"Import successful\")'"
