[project]
name = "traj-dist-rs"
version = "1.0.0b1"
description = "High-performance trajectory distance calculations in Rust with Python bindings"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Chao Song" }]
keywords = ["trajectory", "distance", "algorithm", "performance", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["numpy>=1.21.6"]

[project.optional-dependencies]
test = ["polars>=1.8.2", "pydantic>=2.12.5", "pytest>=8.3.5"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=24.8.0",
    "ipykernel>=7.1.0",
    "ipython>=8.38.0",
    "isort>=5.13.2",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "linkify-it-py>=2.0.3",
    "maturin>=1.11.5",
    "myst-nb>=1.3.0",
    "pandas>=1.5.1",
    "pip>=25.3",
    "ruff>=0.14.14",
    "setuptools>=75.3.3",
    "sphinx>=8.1.3",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["maturin>=1.11.5"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "traj_dist_rs._lib"
features = ["python-binding", "parallel", "pyo3/extension-module"]

[tool.cibuildwheel]
build-frontend = "build[uv]"
skip = "pp* cp314*"
test-extras = ["test"]
test-command = "pytest {project}/py_tests -v --ignore={project}/py_tests/test_batch_performance.py --ignore={project}/py_tests/test_debug_metainfo.py"

[tool.cibuildwheel.linux]
# Build for x86_64 and aarch64 with both glibc and musl
archs = ["x86_64", "aarch64"]
environment = { CARGO_TERM_COLOR = "always" }

[tool.cibuildwheel.macos]
# Build for both Intel (x86_64) and Apple Silicon (arm64)
archs = ["x86_64", "arm64"]
environment = { CARGO_TERM_COLOR = "always", MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.cibuildwheel.windows]
# Build for AMD64 only
archs = ["AMD64"]
environment = { CARGO_TERM_COLOR = "always" }
