[project]
name = "traj-dist-rs"
version = "1.0.0rc4"
description = "High-performance trajectory distance & similarity measures in Rust with Python bindings"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Chao Song" }]
keywords = [
    "trajectory",
    "trajectory-similarity",
    "trajectory-distance",
    "dtw",
    "frechet",
    "lcss",
    "hausdorff",
    "haversine",
    "mobility",
    "clustering",
    "algorithms",
    "spatial-temporal"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.21.6",
]

[project.optional-dependencies]
test = ["polars>=1.8.2", "pydantic>=2.12.5", "pytest>=8.3.5"]
docs = [
    "matplotlib==3.7.5",
    "mike>=2.1.3",
    "mkdocs<1.6.0",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-jupyter>=0.24.1",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.5.18",
    "mkdocstrings[python]>=0.28.3",
    "pygments>=2.19.2",
    "pymdown-extensions>=10.21",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=24.8.0",
    "ipykernel>=7.1.0",
    "ipython>=8.38.0",
    "isort>=5.13.2",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "linkify-it-py>=2.0.3",
    "maturin>=1.11.5",
    "myst-nb>=1.3.0",
    "pandas>=1.5.1",
    "pip>=25.3",
    "pyarrow>=23.0.1",
    "ruff>=0.14.14",
    "setuptools>=75.3.3",
    "sphinx>=8.1.3",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["maturin>=1.11.5"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "traj_dist_rs._lib"
features = ["python-binding", "parallel", "progress", "pyo3/extension-module"]

[tool.cibuildwheel]
build-frontend = "build[uv]"
skip = "pp* cp314* *musllinux*"
test-extras = ["test"]
test-command = "pytest {project}/py_tests -v --ignore={project}/py_tests/test_batch_performance.py --ignore={project}/py_tests/test_debug_metainfo.py"

[tool.cibuildwheel.linux]
# Build for x86_64 and aarch64 with both glibc and musl
archs = ["x86_64", "aarch64"]
environment = { CARGO_TERM_COLOR = "always" }

[tool.cibuildwheel.macos]
before-build = "rustup target add x86_64-apple-darwin"
# Build for both Intel (x86_64) and Apple Silicon (arm64)
archs = ["x86_64", "arm64"]
test-skip = "*_x86_64"
environment = { CARGO_TERM_COLOR = "always", MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.cibuildwheel.windows]
# Build for AMD64 only
archs = ["AMD64"]
environment = { CARGO_TERM_COLOR = "always" }
